Final Commit, API Methods Tested
